--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "countup.js": "^2.1.0",
         "dm-file-uploader": "^1.0.2",
         "feather-icons": "^4.28.0",
+        "intl-tel-input": "^17.0.19",
         "moment": "^2.29.4",
         "selectize": "0.12.4",
         "vue-countup-v3": "^1.0.13",
